# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world
    3. /etc/portage/virtuals is _USER_ configs only. Do not copy the old file.
    4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
       It is for convenience. Do not mistake this for the actual file.

  14 Jun 2004; Jason Stubbs <jstubbs@gentoo.org> pym/portage.py:
  Fixed bug in portdbapi.aux_get where a problem ebuild would cause a lock
  to not be released.

  09 Jun 2004; Marius Mauch <genone@gentoo.org> bin/emerge:
  Changed emerge --info to reflect libc versions other than glibc.  

  08 Jun 2004; Marius Mauch <genone@gentoo.org> pym/portage.py:
  Added the collision-protect feature that prevents packages from
  overwriting files they don't own. Has to be enabled with 
  FEATURES=collision-protect  as it needs more testing before it 
  can be enabled by default (bug #28228).

  05 Jun 2004; Marius Mauch <genone@gentoo.org> bin/ebuild.sh:
  Fix rpm support by changing rpm to rpmbuild (bug #13508).

  05 Jun 2004; Marius Mauch <genone@gentoo.org> bin/regenworld:
  Added a --help message ro regenworld (bug #37539).

  03 Jun 2004; Jason Stubbs <jstubbs@gentoo.org> portage.py: Fixed bug #52720
  and restored patch for a 35% drop in dep calc time.

*portage-2.0.51_pre10 (02 Jun 2003): Fixes

  02 Jun 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Added MANPATH
  to the colon_seperated list -- parsing code NEEDS TO BE FIXED. * and ~*
  matches allowed for package.use for arch-development -- ~* implies *.

  02 Jun 2004; Nicholas Jones <carpaski@gentoo.org> emerge: Fix for a new
  typo in the logger function that prevented emerge.log from being written.

  02 Jun 2004; Nicholas Jones <carpaski@gentoo.org> ebuild.sh: make test
  only occurs when enabled in FEATURES and not in RESTRICT -- defaults OFF.